syntax = "proto3";

package cr8r.controller;

import "core/definition.proto";

message PCreateExperimentRequest {
    core.PDefinition definition = 1;
}

message PCreateExperimentReply {
    uint32 id = 1;
}